# ITCR.DatosII.ProyectoII.LetsPlay.Server

./: .gitignore  CMakeLists.txt  Player.json  README.md  shortestPath.json
doc/Algorithms/: html.rar
doc/DataStructures/: html.rar
doc/Server/: html.rar
src/C++/: mServer.cpp  main.cpp
src/cr.ac.itcr.Algorithms/: Backtracker.cpp  Backtracker.h  Backtracking.cpp  Backtracking.h  JsonParser.cpp  JsonParser.h  PathFinding.cpp  PathFinding.h  PathfindingA.cpp  PathfindingAStar.cpp  PathfindingAStar.h  Player.cpp  Player.h  SeachCell.h  StarNode.cpp  StarNode.h
src/cr.ac.itcr.DataStructures/: LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  PlayerNode.cpp  PlayerNode.h
src/cr.ac.itcr.Server/: mServer.cpp  mServer.h  main.cpp
